# crossterm_progress_bar

./: Cargo.toml  README.md  dev
examples/: showcase.rs  side_by_side.rs
src/: error.rs  lib.rs  main.rs  progress_bar.rs
src/progress_bar/: alias.rs  chain.rs  style.rs
