[package]
name = "crossterm_progress_bar"
version = "2.1.0"
edition = "2021"
description = "Library for drawing progress bars"
license = "MIT"
repository = "https://github.com/tsorak/crossterm_progress_bar"
keywords = ["crossterm", "progress", "bar", "cli"]

[lib]
name = "crossterm_progress_bar"
path = "src/lib.rs"

[dependencies]
crossterm = "0.27.0"
thiserror = "1"
